--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
 <head>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
 </head>
 <body>
-    <!--this div will act as a container for all 16 grids--> 
-    <div id="container">    </div>
+    <h1>
+        ETCH A SKETCH
+    </h1>
+    <div id = "menu">
+        <form>
+            <label>Choose grid size:</label>
+            <input id="gridInput" type="number" min="2" max="100">
+            <label>(2 - 100)</label>
+        </form>
+        <button id="createGrid">Create Grid</button>    
+        <button id="clearGrid">Clear Grid</button>
+        <button id="resetGrid">Reset Grid</button>
+    </div>
+    <!--this div will act as a container for all rows to form the grid--> 
+    <div id = "gridContainer"></div>
 </body>
 </html>
