refactor button layout and improve styles for grid controls

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             <input id="gridInput" type="number" min="2" max="100">
             <label>(2 - 100)</label>
         </form>
-        <button id="createGrid">Create Grid</button>    
-        <button id="clearGrid">Clear Grid</button>
-        <button id="resetGrid">Reset Grid</button>
+        <div id="buttonMenu">
+            <button id="createGrid">Create Grid</button>    
+            <button id="clearGrid">Clear Grid</button>
+            <button id="resetGrid">Reset Grid</button>
+        </div>
     </div>
     <!--this div will act as a container for all rows to form the grid--> 
     <div id = "gridContainer"></div>
