--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
     </div>
     <!--this div will act as a container for all rows to form the grid--> 
     <div id = "gridContainer"></div>
+    <footer>
+        <div>
+            <text>
+                <p>
+                    <a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch">The Odin Project</a> - <a href="https://github.com/ManuelDAssoro/Etch-a-Sketch">My GitHub repository</a>
+                </p>
+            </text>
+            
+        </div>
+        
+    </footer>
 </body>
 </html>
