add grid size display functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <!--this div will act as a container for all rows to form the grid--> 
     <div id = "gridContainer"></div>
+    <div id = "gridSizeDisplay"></div>
     <footer>
         <div>
             <text>
