--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <label>Choose grid size:</label>
             <input id="gridInput" type="number" min="2" max="100">
             <label>(2 - 100)</label>
+            <button id="createGrid" type="button">Submit</button>  
         </form>
-        <div id="buttonMenu">
-            <button id="createGrid">Create Grid</button>    
-            <button id="clearGrid">Clear Grid</button>
+        <div id="buttonMenu"> 
+            <button id="clearGrid">Clear Colors</button>
             <button id="resetGrid">Reset Grid</button>
         </div>
     </div>
