add black and rainbow brush modes

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <label>Choose grid size:</label>
             <input id="gridInput" type="number" min="2" max="100">
             <label>(2 - 100)</label>
-            <button id="createGrid" type="button">Submit</button>  
         </form>
-        <div id="buttonMenu"> 
-            <button id="clearGrid">Clear Colors</button>
-            <button id="resetGrid">Reset Grid</button>
+        <div id="buttonMenu">             
+            <button id="blackBrush">Black</button>
+            <button id="rainbowBrush">Rainbow</button>
+            <button id="clearGrid">Clear</button>
         </div>
     </div>
     <!--this div will act as a container for all rows to form the grid--> 
