--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
             <text>
                 <p>
-                    <a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch">The Odin Project</a> - <a href="https://github.com/ManuelDAssoro/Etch-a-Sketch">My GitHub repository</a>
+                    <a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch">The Odin Project</a> - <a href="https://github.com/ManuelDAssoro/Etch-a-Sketch">GitHub repository</a>
                 </p>
             </text>
             
